address more warnings